client/src/index.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: #4d4d4d;
  /* border: 1px solid black */
}


#app {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgba(240, 240, 240, 1);
}

nav {
  width: 100%;
  padding: 1rem 0;
  background-color: #4d4d4d;
}

a:hover {
  text-decoration: none;
}

.container {
  display: flex;
  flex-direction: column-reverse;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  color: white;
}

.container img {
  width: 3rem;
  height: 3rem;
  margin-right: 1rem;
}

#logo {
  display: none
}

.nav-menu {
  display: flex;
  justify-content: space-around;
  width: 100%;
}

.nav-button {
  padding: 0.25rem .75rem;
  text-transform: uppercase;
  color: white;
  font-weight: bold;
  margin: 0rem 0.25rem;
  border-radius: 0.25rem;
  background-color: rgba(255, 255, 255, 0.1);
  transition: 0.25s ease all;
  border-bottom: 3px solid white;
  display: flex;
  align-items: center;
}

.nav-button svg {
  display: none;
}

.nomargin svg{
  margin: 0;
  fill: white;
  display: block
}

.nav-button:hover {
  background-color: rgba(255, 255, 255, 0.5);
  color: #4d4d4d;
  text-decoration: none;
}

.nav-button:hover svg {
  stroke: #4d4d4d;
}

.nav-button-active {
  background-color: rgba(255, 255, 255, 0.25);
  border-bottom: 3px solid rgba(245, 124, 0, 1);
}

.access-block {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: rgba(255, 255, 255, 0.25);
  padding: 0.25rem;
  border-radius: 3rem;
}

.access-block h2 {
  padding: 0 1rem;
  font-size: 1.3rem;
  margin: 0;
  color: white;
}

.access-block button {
  padding: 0.25rem 1rem;
  border-radius: 0.5rem 2rem 2rem 0.5rem;
  background-color: rgba(255, 255, 255, 0.4);
  font-size: 1rem;
  padding: 0.75rem;
  outline: none;
  border: none;
  text-transform: uppercase;
  font-weight: bold;
  transition: 0.25s ease all;
}

.access-block .login {
  border-radius: 2rem;
}

.access-block button:hover {
  background-color: rgba(255, 255, 255, 0.75);
}

.profile-img {
  width: 3rem;
  height: 3rem;
  overflow: hidden;
  border-radius: 50%;
  border: 1px solid white;
}

.profile-img img {
  width: 100%;
  height: 100%;
}

main {
  width: 100%;
  max-width: 1200px;
  padding: 0;
  border-top: 0;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  background-color: rgba(240, 240, 240, 1);
}

main h1 {
  text-align: center;
  width: 100%;
  padding: 0.5rem;
  border-bottom: 3px solid #4d4d4d;
}

main h2 {
  text-align: center;
  padding: 5rem 0;
}

.spinner {
  position: absolute;
  display: flex;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  background-color: white;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.loading {
  display: flex;
  min-height: 500px;
  align-items: center;
  justify-content: center;
}

#add-form-cont {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
}

#add-form {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 800px;
}

#add-form div {
  display: flex;
  margin: 0.5rem 0;
}

#add-form div label {
  flex: 1;
  text-align: right;
  margin-right: 0.5rem;
  font-weight: bold;
}

#add-form div input,
#add-form div textarea,
#add-form div select {
  flex: 4;
  border: 1px solid #4d4d4d;
  border-radius: 0.25rem;
  padding: 0.5rem;
  outline: 0;
}

.form-required {
  background-color: rgba(245, 124, 0, 0.2);
}

#add-form button,
.note-form button,
.form-error {
  padding: 0.5rem 2rem;
  border-radius: 2rem;
  margin-top: 0.5rem;
  border: none;
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  font-size: 1.5rem;
  text-transform: uppercase;
  font-weight: bold;
  transition: 0.25s ease all;
  outline: none;
  text-align: center;
}

.form-error {
  background-color: rgba(189, 9, 9, 0.5);
  color: white;
  text-transform: none;
  transition: 0.25s ease all;
  text-align: center;
}

.input-error {
  border: 1px solid red !important;
  background-color: rgb(238, 204, 204) !important;
}

#add-form button:hover,
.note-form button:hover {
  background-color: rgba(245, 124, 0, 1);
}

.quoteList {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  width: 100%;
}

.search-filters {
  width: 100%;
  text-align: center;
  border-bottom: 1px solid #4d4d4d;
  margin-bottom: 1.5rem;
}

.quoteCard {
  width: 95%;
  border: 1px solid black;
  background-color: rgba(0, 0, 0, 0.1);
  margin: 0.5rem;
  display: flex;
  flex-direction: column;
  transition: 0.25s ease all;
}

.quoteCard:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

.quoteCardTop {
  display: flex;
}

.quoteCardBottom {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid #4d4d4d;
}

.quoteLinks {
  display: flex;
  justify-content: flex-end;
  padding: 0.25rem;
}

.rotate {
  display: block;
  transform-origin: top left;
  transform: rotate(-90deg) translate(-100%);
  margin-top: -50%;
  white-space: nowrap;
}

.rotate span {
  color: black
}

.rotation-wrapper-inner {
  padding: 50% 0;
  height: 0;
}

.rotation-wrapper-outer {
  background-color: rgba(0, 0, 0, 0.1);
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  padding: 0 0.15rem;
  width: 2em;
  border-right: 1px solid #4d4d4d;
}

.details {
  padding-left: 0.5em;
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  justify-content:flex-end;
}

.sub-details {
  display: flex;
  flex-direction: column;
  width: 100%;
  order: 2;
}

.sub-details div {
  padding: 0 0.5rem;
}

.status {
  display: flex;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.5);
  padding: 0 1rem;
  border-left: 1px solid #4d4d4d;
  border-bottom: 1px solid #4d4d4d;
  border-radius: 0 0 0 0.75rem;
  flex-shrink: 0;
  flex-grow: 0;
  order: 1
}

.quoteCard svg {
  width: 1.5rem;
  height: 1.5rem;
}

.jnum {
  font-size: 1.5rem;
  font-weight: bold;
}

.customer {
  font-size: 1.5rem;
  font-weight: normal;
  text-transform: uppercase;
  white-space: pre-wrap;
}

.desc {
  font-size: 1.5rem;
  font-style: italic;
  white-space: pre-wrap;
}

.additional {
  width: 100%;
  padding: 0.5rem;
  border-radius: 0.5rem 0 0 0;
  height: 4rem;
  background-color: rgba(255, 255, 255, 0.5);
  white-space: pre;
  overflow-y: auto;;
  white-space: pre-wrap;
  order: 3;
}

.filter-container {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  padding-bottom: 0.5rem;
  border-bottom: 3px solid #4d4d4d;
}

.filter-container label {
  margin: 0;
  padding-right: 0.5rem;
  font-weight: bold;
}

.filter-el {
  padding: 0 0.5rem;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.filter-el p {
  margin: 0;
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
  transition: 0.25s ease all;
  border: 1px solid #4d4d4d;
  border-bottom: 3px solid #4d4d4d;
  color: white;
  background-color: #707070;
  font-weight: bold;
}

.filter-el p:hover {
  background-color: rgba(122, 122, 122, 0.5);
  border-color: rgba(122, 122, 122, 0.5);
  color: #4d4d4d;
}

.filter-el .clicked {
  background-color: rgba(185, 185, 185, 0.5);
  color: #4d4d4d;
  border-color: rgba(245, 124, 0, 1);
}

.cardLink {
  margin-left: 0.5rem;
}

.cardLink svg {
  margin-right: 0.5rem;
}

.cardLink p {
  margin: 0;
  border: 1px solid #4d4d4d;
  padding: 0.25rem 0.75rem;
  border-radius: 0.25rem;
  display: flex;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.1);
  transition: 0.25s ease all;
}

.cardLink p:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

.api-error {
  display: block;
  text-align: center;
  color: red;
}

.tbd {
  background-color: rgb(228, 228, 176);
}

.rfq,
.quote-review {
  background-color: rgb(233, 187, 150);
}

.production,
.production-review {
  background-color: rgb(253, 173, 173);
}

.hold {
  background-color: rgb(230, 48, 48);
  color: white;
}

.production-ready {
  background-color: rgb(182, 218, 182);
}

.archived {
  background-color: #4d4d4d;
  color: white;
}

.note-form {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.note-form textarea {
  width: 100%;
  resize: vertical;
  outline: none;
  border-radius: 0.25rem;
}

.note-form label {
  margin: 0;
  font-size: 1.25rem;
  font-weight: bold;
  color: #4d4d4d;
}

.note-count {
  padding-left: 0.5rem;
  font-style: oblique;
}

.note-cont {
  width: 90%;
  outline: 1px dashed #4d4d4d;
  padding: 0.5rem 1rem;
  display: flex;
  flex-direction: column;
  background-color: rgba(255, 255, 255, 0.4);
  transition: 0.25s ease all;
}

.note-cont:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

.note-details {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.note-by {
  font-weight: bold;
}

.note-date {
  font-style: italic;
  font-size: 0.8rem;
  margin-left: 0.5rem;
}

.note-text {
  white-space: pre-wrap;
}

.pulse {
  background-color: #222;
  animation-name: color;
  animation-duration: 2s;
  animation-iteration-count: infinite;
}

.statsCont {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  width: 100%;
  margin-top: 1rem;
}

.statsCont h3 {
  width: 100%;
  text-align: center;
}

.priorityRate {
  display: flex;
  align-items: center;
}

.priorityRate p {
  margin: 0;
}

.statsTitle {
  font-weight: bold;
  padding-right: 0.5rem;
}

@keyframes color {
  0% {
    background-color: rgba(255, 255, 255, 0.1);
  }
  50% {
    background-color: rgba(245, 124, 0, 1);
  }
  100% {
    background-color: rgba(255, 255, 255, 0.1);
  }
}

/* width */
::-webkit-scrollbar {
  width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #999;
  border-radius: 4px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #4d4d4d;
}

@media screen and (min-width: 768px) {
  main {
    padding: 1rem 1rem 2rem 1rem;
    border-radius: 0 0 1rem 1rem;
    border: 3px solid #4d4d4d;
    border-top: 0;
  }

  .container {
    justify-content: space-between;
    align-items: center;
    flex-wrap: nowrap;
    flex-direction: row;
  }

 
  .nav-menu {
    width: auto
  }

  .nav-button {
    padding: 0.5rem 1rem;
    text-transform: uppercase;
    color: white;
    font-weight: bold;
    margin: 0rem 0.25rem;
    border-radius: 0.25rem;
    background-color: rgba(255, 255, 255, 0.1);
    transition: 0.25s ease all;
    border-bottom: 3px solid white;
    display: flex;
    align-items: center;
  }

  .details {
    justify-content: space-between;
  }

  .sub-details {
    flex-direction: row;
    width: auto;
    order: 1;
  }

  .status {
    order: 2
  }

  .note-form textarea {
    width: 80%;
  }
  
}

@media screen and (min-width: 900px) {
  .nav-button svg {
    display: block;
    stroke: white;
    color: white;
    width: 1.25rem;
    height: 1.25rem;
    transition: 0.25s ease all;
    margin-right: 0.4rem;
  }

  .nomargin svg{
    margin: 0;
    fill: white
  }
  
  #logo {
    display: block
  }  
}

